--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.example</groupId>
-			<artifactId>common-dto</artifactId>
+			<artifactId>common-lib</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
